--- a/css/style.css
+++ b/css/style.css
@@ -63,3 +63,13 @@ body {
     /* text-align: center; */
     padding-left: 30px;
 }
+
+@media only screen and (max-width:620px) {
+
+    /* For mobile phones: */
+    .menu,
+    .main,
+    .right {
+        width: 100%;
+    }
+}
